added reference Data Access layer to Core layer.

--- a/DigiKala.Core/DigiKala.Core.csproj
+++ b/DigiKala.Core/DigiKala.Core.csproj
@@ -5,8 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
@@ -19,6 +17,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DigiKala.DataAccessLayer\DigiKala.DataAccessLayer.csproj" />
   </ItemGroup>
 
 </Project>
